syntax = "proto3";

package demo.api.v1;


option go_package = "github.com/wangbinxiang/go-lesson-four/api/blog/v1";

service UserServer {
    rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoResponse){}
}


message GetUserInfoRequest {
}

message GetUserInfoResponse {
    int32 id = 1;
    string username = 2;
    string city = 3;
}